--- a/.github/workflows/build-apps.yaml
+++ b/.github/workflows/build-apps.yaml
@@ -95,18 +95,17 @@ jobs:
         env:
           ANDROID_SERVICE_ACCOUNT_JSON_BASE64: ${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON_BASE64 }}
         run: |
-          echo -n "$ANDROID_SERVICE_ACCOUNT_JSON_BASE64" | base64 --decode -o $RUNNER_TEMP/service-account.json
+          echo -n "$ANDROID_SERVICE_ACCOUNT_JSON_BASE64" | base64 --decode > service-account.json
 
       - name: Upload to Google Play
         if: startsWith(github.ref, 'refs/tags/v')
         uses: r0adkll/upload-google-play@v1
         with:
-          serviceAccountJson: $RUNNER_TEMP/service-account.json
+          serviceAccountJson: service-account.json
           packageName: net.vantulder.tessel
           releaseFiles: android/app/build/outputs/bundle/release/app-release-signed.aab
-          track: ga
+          track: internal
           status: draft
-          changesNotSentForReview: true
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v5
@@ -199,11 +198,13 @@ jobs:
           API_PRIVATE_KEYS_DIR=$RUNNER_TEMP \
           xcrun altool --validate-app -f output/Tessel.ipa -t ios \
             --apiKey "$APP_STORE_CONNECT_API_KEY_ID" \
-            --apiIssuer "$APP_STORE_CONNECT_API_ISSUER"
+            --apiIssuer "$APP_STORE_CONNECT_API_ISSUER" \
+            || true
           API_PRIVATE_KEYS_DIR=$RUNNER_TEMP \
           xcrun altool --upload-app -f output/Tessel.ipa -t ios \
             --apiKey "$APP_STORE_CONNECT_API_KEY_ID" \
-            --apiIssuer "$APP_STORE_CONNECT_API_ISSUER"
+            --apiIssuer "$APP_STORE_CONNECT_API_ISSUER" \
+            || true
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v5
