--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -4,8 +4,15 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleLocalizations</key>
+	<array>
+		<string>en</string>
+		<string>nl</string>
+		<string>tr</string>
+		<string>zh-Hant</string>
+	</array>
 	<key>CFBundleDisplayName</key>
-        <string>Tessel</string>
+	<string>Tessel</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
