Adding the Spanish translation.
Co-authored-by: anauta <treschavales@gmail.com>

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -7,6 +7,7 @@
 	<key>CFBundleLocalizations</key>
 	<array>
 		<string>en</string>
+		<string>es</string>
 		<string>nl</string>
 		<string>tr</string>
 		<string>zh-Hant</string>
