--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@capacitor/device": "^7.0.2",
     "@capacitor/ios": "^7.4.4",
     "@capacitor/preferences": "^7.0.2",
+    "@capacitor/share": "^7.0.2",
     "@capacitor/status-bar": "^7.0.3",
     "@capawesome/capacitor-android-edge-to-edge-support": "^7.2.3",
     "@jest/globals": "^30.2.0",
