Show user-friendly version number on settings screen.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tessel",
+  "version": "1.0.10",
   "homepage": "https://tessel.vantulder.net/",
   "license": "GPL-3.0-or-later",
   "author": {
