Add German translation.

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -6,6 +6,7 @@
 	<string>en</string>
 	<key>CFBundleLocalizations</key>
 	<array>
+		<string>de</string>
 		<string>en</string>
 		<string>es</string>
 		<string>nl</string>
