Update URLs to new location.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tessel",
   "version": "1.0.16",
-  "homepage": "https://tessel.vantulder.net/",
+  "homepage": "https://play.tessel.at/",
   "license": "GPL-3.0-or-later",
   "author": {
     "name": "Gijs van Tulder",
