--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "lingui compile --typescript && NODE_ENV=production parcel build src/index.html --no-source-maps",
     "build-cap-html": "lingui compile --typescript && NODE_ENV=production SKIP_SERVICE_WORKER=true parcel build src/index.capacitor.html --dist-dir dist-capacitor --no-source-maps && rm -r dist-capacitor/social/",
     "serve": "NODE_ENV=development parcel serve src/index.html --no-cache",
-    "test": "lingui compile --typescript && jest",
+    "test": "lingui compile --typescript && vitest",
     "check": "tsc --noEmit",
     "update-icon": "rsvg-convert assets/icons/icon.svg -w 180 -h 180 -o assets/icons/icon.png ; for s in 180 192 512 1024 ; do rsvg-convert assets/icons/icon.svg -w $s -h $s -o assets/icons/icon-$s.png ; done",
     "update-cap-assets": "npx @capacitor/assets generate --iconBackgroundColor '#eeeeee' --iconBackgroundColorDark '#222222' --splashBackgroundColor '#eeeeee' --splashBackgroundColorDark '#111111' --android --assetPath assets/capacitor/",
@@ -43,16 +43,17 @@
     "@capacitor/share": "^7.0.2",
     "@capacitor/status-bar": "^7.0.3",
     "@capawesome/capacitor-android-edge-to-edge-support": "^7.2.3",
-    "@jest/globals": "^30.2.0",
     "@lingui/babel-plugin-lingui-macro": "^5.6.1",
     "@lingui/cli": "^5.6.1",
     "@lingui/swc-plugin": "^5.6.1",
+    "@lingui/vite-plugin": "^5.7.0",
     "@parcel/packager-raw-url": "^2.16.3",
     "@parcel/reporter-bundle-analyzer": "^2.16.3",
     "@parcel/transformer-inline-string": "^2.16.3",
     "@parcel/transformer-sass": "^2.16.3",
     "@parcel/transformer-webmanifest": "^2.16.3",
-    "@swc/jest": "^0.2.39",
+    "@rollup/plugin-node-resolve": "^16.0.3",
+    "@vitejs/plugin-react-swc": "^3.11.0",
     "babel-plugin-transform-define": "^2.1.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "color": "^5.0.3",
@@ -61,7 +62,6 @@
     "eslint-plugin-license-header": "^0.8.0",
     "eslint-plugin-lingui": "^0.11.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "parcel": "^2.16.3",
     "parcel-namer-rewrite": "^2.10.3-rc.5",
@@ -69,12 +69,12 @@
     "prettier": "^3.7.4",
     "process": "^0.11.10",
     "svgo": "^4.0.0",
-    "ts-jest": "^29.4.6",
     "ts-loader": "^9.5.4",
     "tslib": "^2.8.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.49.0"
+    "typescript-eslint": "^8.49.0",
+    "vitest": "^4.0.15"
   },
   "parcel-namer-rewrite": {
     "hashing": "always",
