--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@vitejs/plugin-react-swc": "^3.11.0",
     "babel-plugin-transform-define": "^2.1.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "baseline-browser-mapping": "^2.9.11",
     "color": "^5.0.3",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
