--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@parcel/transformer-webmanifest": "^2.16.3",
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@vitejs/plugin-react-swc": "^3.11.0",
+    "@vitest/coverage-v8": "^4.0.16",
     "babel-plugin-transform-define": "^2.1.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "baseline-browser-mapping": "^2.9.11",
@@ -74,7 +75,7 @@
     "tslib": "^2.8.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.50.0",
+    "typescript-eslint": "^8.50.1",
     "vitest": "^4.0.16"
   },
   "parcel-namer-rewrite": {
